kubernetes/applications/media/books/calibre-web-downloader/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web-downloader
spec:
  selector: {}
  replicas: 0
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 2501
        runAsGroup: 2501
        fsGroup: 2501
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: calibre-web-downloader
        image: ghcr.io/calibrain/calibre-web-automated-book-downloader:20250322 # renovate: docker=ghcr.io/calibrain/calibre-web-automated-book-downloader
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
#          capabilities:
#            drop: [ "ALL" ]
        ports:
          - name: http
            containerPort: 8084
        volumeMounts:
          - name: media
            mountPath: /mnt/media
          - name: logs
            mountPath: /var/log/cwa-book-downloader
          - name: tmp
            mountPath: /tmp/cwa-book-downloader
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: books-media-nfs
      - name: logs
        emptyDir: {}
      - name: tmp
        emptyDir: {}
