kubernetes/applications/media/books/calibre-web-downloader/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web-downloader
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 80
      targetPort: http
